# prompt-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  prompt-lab-instructions.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  experiment.py  trial.py
backend/app/providers/: base.py  gemini.py  openai.py  pyapi.py  registry.py
backend/app/routers/: experiments.py  settings.py  trials.py
backend/app/schemas/: experiment.py  trial.py
backend/app/services/: experiment_service.py  trial_service.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx  ComparisonGrid.tsx  ExperimentDetail.tsx  ExperimentList.tsx  ImageUploader.tsx  ImageZoomModal.tsx  PromptEditor.tsx  Settings.tsx  TrialCard.tsx  useExperimentDetail.ts  usePromptEditor.ts
frontend/src/components/atoms/: Button.tsx  Card.tsx  Icons.tsx  Input.tsx  Label.tsx  Range.tsx  Select.tsx  Textarea.tsx  index.ts
frontend/src/components/molecules/: FormField.tsx  NavItem.tsx  PromptRow.tsx  TemperatureSlider.tsx  index.ts
frontend/src/components/organisms/: CreateExperimentForm.tsx  ExperimentCard.tsx  PageHeader.tsx  ReferenceImageCard.tsx  Sidebar.tsx  (+2 more)
frontend/src/hooks/: useCreateExperimentForm.ts  useExperiments.ts  useSettings.ts
frontend/src/lib/: utils.ts
frontend/src/schemas/: experiment.ts  trial.ts
frontend/src/types/: index.ts
(+1 files in other folders)
